<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.screens.login.LoginFragment"
        android:label="@string/login_label">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.screens.welcome.WelcomeFragment"
        android:label="@string/welcome_label">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.screens.instructions.InstructionsFragment"
        android:label="@string/instructions_label">
        <action
            android:id="@+id/action_instructionsFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:popUpTo="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="com.udacity.shoestore.screens.list.ListFragment"
        android:label="@string/list_label" >
        <action
            android:id="@+id/action_listFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_listFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.udacity.shoestore.screens.detail.DetailFragment"
        android:label="DetailFragment" >
        <action
            android:id="@+id/action_detailFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:popUpTo="@id/listFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>