<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.ShoeViewModel" />
        <variable
            name="shoeData"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/shoe_size_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/shoe_size_text"
            android:textSize="16sp"
            android:text="@={`` + shoeData.size}"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_size_label"
            app:layout_constraintStart_toEndOf="@+id/shoe_size_label"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_edit"
            app:layout_constraintTop_toTopOf="@+id/shoe_size_label" />

        <EditText
            android:id="@+id/shoe_description_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/shoe_description_text"
            android:textSize="16sp"
            android:text="@={shoeData.description}"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_description_label"
            app:layout_constraintStart_toEndOf="@+id/shoe_description_label"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_edit"
            app:layout_constraintTop_toTopOf="@+id/shoe_description_label" />

        <EditText
            android:id="@+id/shoe_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/shoe_name_label"
            android:textSize="16sp"
            android:text="@={shoeData.name}"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_name_label"
            app:layout_constraintStart_toEndOf="@+id/shoe_name_label"
            app:layout_constraintStart_toStartOf="@+id/shoe_company_edit"
            app:layout_constraintTop_toTopOf="@+id/shoe_name_label" />

        <TextView
            android:id="@+id/shoe_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/shoe_name_label"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/company_name_label"
            app:layout_constraintTop_toBottomOf="@+id/company_name_label"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/shoe_company_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/company_name_label"
            android:textSize="16sp"
            android:text="@={shoeData.company}"
            app:layout_constraintBottom_toBottomOf="@+id/company_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/company_name_label"
            app:layout_constraintTop_toTopOf="@+id/company_name_label" />

        <TextView
            android:id="@+id/company_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/company_name_label"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/shoe_company_edit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/shoe_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/shoe_size_label"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_label"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/shoe_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/shoe_description_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_label"
            tools:ignore="MissingConstraints"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/roboto"
            android:onClick="@{() -> shoeViewModel.cancelNewShoe()}"
            android:text="@string/cancel_button"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_description_label"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> shoeViewModel.saveNewShoe()}"
            android:text="@string/save_button"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toTopOf="@+id/cancel_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>