<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        <TextView-->
<!--            android:id="@+id/shoeNameRow"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/shoe_name_label"-->
<!--            android:textSize="16sp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.062"-->
<!--            tools:layout_editor_absoluteX="16dp" />-->

<!--        <TextView-->
<!--            android:id="@+id/shoeCompanyRow"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/company_name_label"-->
<!--            android:textSize="16sp"-->
<!--            tools:layout_editor_absoluteX="16dp"-->
<!--            tools:layout_editor_absoluteY="134dp" />-->

<!--        <TextView-->
<!--            android:id="@+id/shoeSizeRow"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/shoe_size_label"-->
<!--            android:textSize="16sp"-->
<!--            tools:layout_editor_absoluteX="16dp"-->
<!--            tools:layout_editor_absoluteY="103dp" />-->

<!--        <TextView-->
<!--            android:id="@+id/shoeDescriptionRow"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/shoe_description_label"-->
<!--            android:textSize="16sp"-->
<!--            tools:layout_editor_absoluteX="16dp"-->
<!--            tools:layout_editor_absoluteY="201dp" />-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/shoeSizeRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:hint="@string/shoe_size_text"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/shoe_size_label"
                app:layout_constraintStart_toEndOf="@+id/shoe_size_label"
                app:layout_constraintStart_toStartOf="@+id/shoeNameRow"
                app:layout_constraintTop_toTopOf="@+id/shoe_size_label" />

            <TextView
                android:id="@+id/shoeDescriptionRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:hint="@string/shoe_description_text"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/shoe_description_label"
                app:layout_constraintStart_toEndOf="@+id/shoe_description_label"
                app:layout_constraintStart_toStartOf="@+id/shoeSizeRow"
                app:layout_constraintTop_toTopOf="@+id/shoe_description_label" />

            <TextView
                android:id="@+id/shoeNameRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:hint="@string/shoe_name_label"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/shoe_name_label"
                app:layout_constraintStart_toEndOf="@+id/shoe_name_label"
                app:layout_constraintStart_toStartOf="@+id/shoeCompanyRow"
                app:layout_constraintTop_toTopOf="@+id/shoe_name_label" />

            <TextView
                android:id="@+id/shoe_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/shoe_name_label"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/company_name_label"
                app:layout_constraintTop_toBottomOf="@+id/company_name_label"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/shoeCompanyRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:hint="@string/company_name_label"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/company_name_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/company_name_label"
                app:layout_constraintTop_toTopOf="@+id/company_name_label" />

            <TextView
                android:id="@+id/company_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/company_name_label"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/shoeCompanyRow"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/shoe_size_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/shoe_size_label"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/shoe_name_label"
                app:layout_constraintTop_toBottomOf="@+id/shoe_name_label"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/shoe_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/shoe_description_label"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/shoe_size_label"
                app:layout_constraintTop_toBottomOf="@+id/shoe_size_label"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>